<resources>
    <string name="app_name">Vespapp</string>
    <string name="cabecera">Pregunta %1$s/%2$s</string>

    <string name="add_Photo">¡Haz una foto!</string>

    <string name="btn_selFotos">Seleccionar foto</string>
    <string name="txt_selFotos">O si ya tienes fotos, ¡añádelas!</string>
    <string name="confirm_cap_titulo">Añade fotos</string>
    <string name="confirm_cap_location">Ha sido en...</string>
    <string name="confirm_cap_map">Mueve el marker</string>
    <string name="confirm_cap_txt_confirm">La foto es de...</string>
    <string name="confirm_cap_map_sight">Avistamiento</string>
    <string name="confirm_cap_questions">Preguntas</string>
    <string name="nido">Nido</string>
    <string name="avispa">Avispa</string>
    <string name="confirm_cap_DeleteDialog_msg">¿Eliminar imagen?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="add_picture">Añade otra foto</string>
    <string name="select_picture">Selecciona otra foto</string>
    <string name="status_pending">Pendiente</string>
    <string name="status_processed">Tramitado</string>
    <string name="status_processing">En proceso</string>
    <string name="status_unsent">No enviada</string>
    <string name="listo">¡Listo!</string>
    <string name="s_lo_quedan_unas_preguntas">Sólo quedan unas preguntas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_info_description">InfoDescription</string>
    <string name="title_activity_menu_contact">Contacto</string>
    <string name="title_activity_menu_about_us">Acerca de nosotros</string>
    <string name="title_activity_menu_contributors">Colaboradores</string>

    <string name="icon_heart">&#xf0f9;</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="about_us_date_1">Octubre de 2015</string>
    <string name="about_us_title_1">Confirmación por primera vez de la avispa asiática</string>
    <string name="about_us_body_1">El Laboratorio de Zoología del Departamento de Biología de la Universitat de les Illes Balears confirmó la detección por primera vez de esta avispa en Mallorca, gracias a la colaboración de los apicultores.</string>
    <string name="link_us_date_1">http://diari.uib.es/arxiu/La-avispa-asiatica-ya-esta-en-Mallorca.cid411005</string>

    <string name="about_us_date_2">Octubre - Noviembre de 2015</string>
    <string name="about_us_title_2">Organitzación para la detección del nido de la avispa asiática</string>
    <string name="about_us_body_2">El Servei de Protecció d’Espècies de la Conselleria de Medi Ambient, Agricultura i Pesca organiza operativos para la detección del nido de la avispa asiática. El Equipo de control de fauna del COFIB logra retirar con éxito el único nido encontrado en la zona de la Vall de Sóller.</string>
    <string name="link_us_date_2">http://www.caib.es/pidip/dadesComunicat.do?lang=es&amp;codi=8835160</string>

    <string name="about_us_date_3">Marzo de 2016:</string>
    <string name="about_us_title_3">Maratón Informático</string>
    <string name="about_us_body_3">La UIB (Laboratorio de Zoología, Escuela Politécnica Superior y Vicerrectorado de Innovación y Transferencia) y Habitissimo organizan un maratón informático para diseñar una app contra la avispa asiática. Primera fase de la creación de Vespapp.</string>
    <string name="link_us_date_3">http://diari.uib.es/arxiu/La-UIB-y-Habitissimo-organizan-un-maraton.cid432855</string>

    <string name="about_us_date_4">Abril – Mayo de 2016</string>
    <string name="about_us_title_4">Segunda fase de Vespapp</string>
    <string name="about_us_body_4">Un equipo de tres estudiantes de ingeniería informática,becados por Cátedra Santander UIB de Innovación y Transferencia del Conocimiento (CSUIT), llevan a cabo la segunda fase de la creación de Vespapp. Paralelamente el equipo investigador del proyecto (Laboratorio de Zoología, Informática, Sistemas de Información Geográfica (SIG) y Comunicación, participación y redes sociales) trabaja para que Vespapp sea una realidad tangible.</string>
    <string name="link_us_date_4"></string>

    <string name="contributers_tittle">Colaboradores de Vespapp</string>

    <string name="about_us_date_5">Mayo de 2016:</string>
    <string name="about_us_title_5">Presentación de Vespapp</string>
    <string name="about_us_body_5"></string>
    <string name="link_us_date_5"></string>
</resources>
