<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_weight="1.00" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/add_Photo" />

    <ImageButton
        android:id="@+id/btn_cam"
        android:src="@drawable/camera"
        style="@style/camera_button"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="50dp"
         />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_weight="0.00" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_selFotos"
        android:layout_weight="0.00" />

    <Button
        android:id="@+id/btn_selFotos"
        style="@style/camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/btn_selFotos" />

</LinearLayout>