<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sigthing_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brandPrimary"
        app:titleTextColor="@color/colorTitle">
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_pictures"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:id="@+id/btn_add_picture"
            style="@style/camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/colorTitle"
            android:text="@string/add_picture" />

        <Button
            android:id="@+id/btn_select_picture"
            style="@style/camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/colorTitle"
            android:text="@string/select_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm_cap_txt_confirm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_nido"
                android:src="@drawable/nidoicon"
                style="@style/type_button"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="28dp"
                android:textColor="@color/colorTitle"
                android:text="@string/nido" />

            <ImageButton
                android:id="@+id/btn_avispa"
                android:src="@drawable/vespaicon"
                style="@style/type_button"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="30dp"
                android:layout_gravity="right"
                android:textColor="@color/colorTitle"
                android:text="@string/avispa" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>